# Python3LambdaTemplate

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: pytest.yml
src/pylambda/: handler.py
tests/: test_handler.py
